--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.twinnation</groupId>
 	<artifactId>spring-as-backend</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2</version>
 	<packaging>jar</packaging>
 
 	<name>spring-as-backend</name>
@@ -88,6 +88,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.twinnation</groupId>
+			<artifactId>super-assert</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 
 	</dependencies>
 
@@ -99,6 +104,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
